<resources>
    <string name="app_name">Dakhl o Kharj</string>
    <string name="app_subtitle">Student dormitory spendings calculation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_a_purchase">Add an order</string>
    <string name="manage_residents">Manage residents</string>
    <string name="summery">Expenses summery</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="about_us_text">Developer: Mahdi Jafari\n39813161035</string>
    <string name="ok">OK</string>
    <string name="resident_name_hint">Resident name</string>
    <string name="add_a_new_resident">Add a new resident</string>
    <string name="active">Active</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="new_resident_saved_successfully">Saved Successfully</string>
    <string name="an_error_occurred_during_save">An error occurred during saving</string>
    <string name="this_name_was_entered">This name has been entered</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="no_data_found">No data found</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="enter_new_name">New Name</string>
    <string name="rename_resident">Rename Resident</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="no_name_was_given">No name was given</string>
    <string name="there_is_a_resident_with_this_name">There is a resident with this name</string>
    <string name="resident_got_deleted">Resident got deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product Price</string>
    <string name="buyer">Buyer</string>
    <string name="add_consumer">Add consumer</string>
    <string name="consumers">Consumers:</string>
    <string name="add">Add</string>
    <string name="its_empty">It\'s empty</string>
    <string name="invalid_value">Invalid value</string>
    <string name="no_consumer_selected">No consumers were selected</string>
    <string name="buyer_not_found_do_you_want_to_save_new">There is no buyer with such name.\nDo you want to add as new resident?</string>
    <string name="consumer_not_found_do_you_want_to_save_new">There is no consumer with such name.\nDo you want to add as new resident?</string>
    <string name="not_found_in_residents">Not found in residents list</string>
    <string name="purchase_got_deleted">Purchase got deleted</string>
    <string name="filter">Filter</string>
    <string name="delete_all">Delete all</string>
    <string name="price">Price</string>
    <string name="consumer">Consumer</string>
    <string name="buy_date">Buy date</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="purchases_sum">Total expenses: %1$s\$</string>
    <string name="must_be_positive">Must Be positive</string>
    <string name="can_not_be_zero">Can not be zero</string>
    <string name="has_to_be_smaller">Must be smaller</string>
    <string name="has_to_be_bigger">Must be larger</string>
    <string name="date_format">yyyy/mm/dd</string>
    <string name="order_by_time_desc">Order by descending time</string>
    <string name="order_by_time_asc">Order by ascending time</string>
    <string name="order_by_price_desc">Order by descending price</string>
    <string name="order_by_price_asc">Order by ascending price</string>
    <string-array name="order_by_options">
        <item>Order by descending time</item>
        <item>Order by ascending time</item>
        <item>Order by descending price</item>
        <item>Order by ascending price</item>
    </string-array>
    <string-array name="order_by_options_values" translatable="false">
        <item>TIME_ASC</item>
        <item>TIME_DESC</item>
        <item>PRICE_ASC</item>
        <item>PRICE_DESC</item>
    </string-array>
    <string name="time_desc">Time desc</string>
    <string name="time_asc">Time asc</string>
    <string name="price_desc">Price desc</string>
    <string name="price_asc">Price asc</string>
    <string name="are_you_sure_to_delete_all">Are you sure to delete all of these entries?</string>
    <string name="credit">Credit:</string>
    <string name="debt">Debt:</string>
    <string name="summed">Sum:</string>
    <string name="incorrect_date_format">Time format is invalid</string>
    <string name="night_mode">Night mode</string>
    <string name="orders_list_default_order">Default list order</string>
    <string name="settings_shared_preferences">settings</string>
    <string name="settings_default_order">defaultOrder</string>
    <string name="settings_night_mode">nightMode</string>
    <string name="next">Next</string>
    <string name="help_page">helpPage</string>
    <string name="finish">Finish</string>
    <string name="onboarding_finished">onboardingFinished</string>
    <string name="languageSelected">languageSelected</string>
    <string name="application_language">Language</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="persian_untranslated" translatable="false">فارسی</string>
    <string name="english_untranslated" translatable="false">English</string>
    <string-array name="languages">
        <item>Persian</item>
        <item>English</item>
    </string-array>
    <string-array name="languages_values" translatable="false">
        <item>FA</item>
        <item>EN</item>
    </string-array>
    <string name="direction">ltr</string>
    <string name="currency">$</string>
    <string name="language">en</string>
    <string name="locale">locale</string>
    <string name="help_rename">Touch and hold to rename a resident.</string>
    <string name="help_delete">Touch and swipe away to remove a resident.\nAny data associated with that resident will be removed too!</string>
    <string name="help_active">Inactive residents are not included in expenses summery calculations.</string>
    <string name="farsi">فارسی</string>
    <string name="import_database">Import database</string>
    <string name="export_database">Export database</string>
    <string name="operation_successful">Operation successful</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="file_location">File location:\n</string>
    <string name="select_correct_file_type">Please select a file from correct type</string>
    <string name="no_storage_access">No access to phone storage</string>
    <string name="no_residents_found">No residents found</string>
    <string name="duplicate">Duplicate entry</string>
    <string name="undo">Undo</string>
    <string name="no_purchase_found">no purchase found</string>
    <string name="price_template">%1$s$</string>
    <string name="no_active_residents_found">Resident isn\'t active</string>
    <string name="please_enter_valid_dates">Please enter valid dates</string>
    <string name="please_enter_a_valid_date">Please enter a valid date</string>
    <string name="order_by">Order by</string>
    <string name="product">Product</string>
    <string name="time">Time</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="consumer_name">Consumer name</string>
    <string name="min">Min</string>
    <string name="max">max</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="min_price_is_larger_than_max">Minimum shouldn\'t be larger than maximum</string>
    <string name="start_time_is_larger_than_end">Start shouldn\'t be larger than end</string>
    <string name="date_input_hint">yyyymmdd</string>
    <string name="date_input_mask" translatable="false">####/##/##</string>
    <string name="database_archive">Database archive</string>
    <string name="new_archive">New archive</string>
    <string name="import_database_from_file">Import database from file</string>
    <string name="please_enter_database_alias">Please enter an alias for your database</string>
    <string name="database_alias">Database alias</string>
    <string name="share_archive">Share archive</string>
    <string name="save_archive">Save archive</string>
    <string name="delete_archive">Delete archive</string>
    <string name="archive_name_hint">Archive name</string>
    <string name="archive_active_status_inactive">Status: inactive</string>
    <string name="archive_active_status_active">Status: active</string>
    <string name="last_modified_template">Last modified:\n%1$s</string>
    <string name="saved_successfully_in">Saved in: %1$s</string>
    <string name="imported_successfully">Imported successfully</string>
    <string name="invalid_database_file">The given file is not valid!</string>
    <string name="are_you_sure_to_delete_archive">Are you sure to delete this archive?</string>
    <string name="showcase_resident_adding">
        Before anything, add the information of the people who live together
        from the \"Manage residents\" menu
    </string>
    <string name="showcase_add_purchase">
        You can add purchases from here\n
        The consumers split the cost and must pay to the buyer
    </string>
    <string name="showcase_product">Ice cream</string>
    <string name="showcase_price">22</string>
    <string name="showcase_resident">Tommy</string>
    <string name="showcase_purchase">
        The buyer name is written in the middle of purchase items\n
        By clicking any purchase you can see the list of consumers
    </string>
    <string name="showcase_delete_purchase">
        Swipe to delete purchase
    </string>
    <string name="showcase_resident_input">
        From here you can add residents
    </string>
    <string name="showcase_resident_name_edit">
        You can change the resident name by holding it
    </string>
    <string name="showcase_active_resident">
        Only active resident purchases are shown in the home screen
    </string>
    <string name="showcase_delete_resident">
        Swipe to delete resident
    </string>
    <string name="deleted">deleted</string>
    <string name="purchases_order">Purchases order</string>
    <string name="filter_purchases">Filter purchases</string>
</resources>
