<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/round_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_order_time_asc"
        android:title="@string/order_by"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_order_time_desc"
                android:title="@string/order_by_time_desc"
                app:showAsAction="collapseActionView" />

            <item
                android:id="@+id/action_order_time_asc"
                android:title="@string/order_by_time_asc"
                app:showAsAction="collapseActionView" />

            <item
                android:id="@+id/action_order_price_desc"
                android:title="@string/order_by_price_desc"
                app:showAsAction="collapseActionView" />

            <item
                android:id="@+id/action_order_price_asc"
                android:title="@string/order_by_price_asc"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>
</menu>