<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemFilter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuOrderByTimeDesc"
        android:title="@string/order_by_time_desc"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menuOrderByTimeAsc"
        android:title="@string/order_by_time_asc"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menuOrderByPriceDesc"
        android:title="@string/order_by_price_desc"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menuOrderByPriceAsc"
        android:title="@string/order_by_price_asc"
        app:showAsAction="collapseActionView" />
</menu>