<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_manage_residents"
            android:icon="@drawable/ic_people"
            android:title="@string/manage_residents" />
        <item
            android:id="@+id/nav_summery"
            android:icon="@drawable/ic_equalizer"
            android:title="@string/summery" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />
    </group>

</menu>