<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="ir.demoodite.dakhlokharj.ui.components.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_filterPurchasesFragment"
            app:destination="@id/filterPurchasesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_databaseManagerFragment"
            app:destination="@id/databaseManagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/manageResidentsFragment"
        android:name="ir.demoodite.dakhlokharj.ui.components.residents.ResidentsFragment"
        android:label="@string/manage_residents"
        tools:layout="@layout/fragment_residents" />
    <fragment
        android:id="@+id/summeryFragment"
        android:name="ir.demoodite.dakhlokharj.ui.components.summery.SummeryFragment"
        android:label="@string/summery"
        tools:layout="@layout/fragment_summery" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ir.demoodite.dakhlokharj.ui.components.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_databaseManagerFragment"
            app:destination="@id/databaseManagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/filterPurchasesFragment"
        android:name="ir.demoodite.dakhlokharj.ui.components.filterpurchases.FilterPurchasesFragment"
        android:label="@string/filter"
        tools:layout="@layout/fragment_filter_purchases" />
    <fragment
        android:id="@+id/databaseManagerFragment"
        android:name="ir.demoodite.dakhlokharj.ui.components.databasemanager.DatabaseManagerFragment"
        android:label="@string/database_archive"
        tools:layout="@layout/fragment_database_manager">
        <argument
            android:name="importingArchiveUri"
            android:defaultValue="@null"
            app:argType="android.net.Uri"
            app:nullable="true" />
    </fragment>
</navigation>