<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.components.filterPurchases.filters.FilterTimeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_filter_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/screen_padding"
        android:hint="@string/from"
        android:inputType="textPersonName"
        android:layoutDirection="ltr"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textInputLayout_filter_max"
        app:layout_constraintTop_toTopOf="parent">

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/textInputEditText_filter_min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_input_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:singleLine="true"
            app:enable_ime_action="true"
            app:keep_hint="true"
            app:mask="@string/date_input_mask"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_filter_max"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/screen_padding"
        android:hint="@string/to"
        android:inputType="textPersonName"
        android:layoutDirection="ltr"
        app:endIconDrawable="@drawable/round_filter_alt_24"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorPrimary"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintLeft_toRightOf="@id/textInputLayout_filter_min"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textInputLayout_filter_min"
        tools:ignore="RtlHardcoded">

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/textInputEditText_filter_max"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_input_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:singleLine="true"
            app:enable_ime_action="true"
            app:keep_hint="true"
            app:mask="@string/date_input_mask"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_purchases_filtered"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_purchases_sum"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_filter_min"
        tools:listitem="@layout/item_purchase" />

    <TextView
        android:id="@+id/tv_filtered_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/l"
        android:gravity="center"
        android:text="@string/no_data_to_show"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/rv_purchases_filtered" />

    <TextView
        android:id="@+id/tv_purchases_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/l"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>