<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:padding="16dp"
    tools:context=".onboarding.screens.Help1Fragment">

    <ImageView
        android:id="@+id/imageViewRenameHelp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/help_page"
        android:src="@drawable/help_rename"
        app:layout_constraintBottom_toTopOf="@id/textViewRenameHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRenameHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/help_rename"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeleteHelp"
        app:layout_constraintEnd_toEndOf="@id/imageViewRenameHelp"
        app:layout_constraintStart_toStartOf="@id/imageViewRenameHelp"
        app:layout_constraintTop_toBottomOf="@id/imageViewRenameHelp" />

    <ImageView
        android:id="@+id/imageViewDeleteHelp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/help_page"
        android:src="@drawable/help_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDeleteHelp" />

    <TextView
        android:id="@+id/textViewDeleteHelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help_delete"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/imageViewDeleteHelp"
        app:layout_constraintStart_toStartOf="@id/imageViewDeleteHelp"
        app:layout_constraintTop_toBottomOf="@id/textViewRenameHelp" />

    <Button
        android:id="@+id/buttonHelp1Next"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/secondaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>