<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/settings"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:padding="16dp"
            android:text="@string/night_mode"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/orders_list_default_order"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerDefaultOrderBy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/order_by_options_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/application_language"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/languages" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>